finished the project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <div class="container">
+    <div id="gameboard">
+        <!-- <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div>
+        <div id="grid-items">1</div> -->
+    </div>
+    <div id="player-controls">
+        <input id="player-one" type="text" placeholder="player one">
+        <input id="player-two" type="text" placeholder="player two">
+        <button id="start-button">Start Game</button>
+       <button id="restart-game">Restart Game</button>
+    </div>
+
+    <div id="message"></div>
+    <div id="display-results"></div>
+</div>
    
     
 
