--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
     <div id="player-controls">
         <input id="player-one" type="text" placeholder="player one">
         <input id="player-two" type="text" placeholder="player two">
-        <button id="start-button">Start Game</button>
-       <button id="restart-game">Restart Game</button>
+        
     </div>
 
     <div id="message"></div>
-    <div id="display-results"></div>
+    <div class="btn-controls">
+        <button id="start-button">Start Game</button>
+        <button id="restart-game">Restart Game</button>
+    </div>
+   
+
+  
+  
 </div>
    
     
